z-index fix

--- a/Game/src/app/components/order/order.component.css
+++ b/Game/src/app/components/order/order.component.css
@@ -8,6 +8,7 @@
   opacity: 1;
   position: absolute;
   top: var(--gap-large);
+  z-index: 100;
 }
 
 .orders.hidden {
